syntax = "proto3";
package lum.network.dfract;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lum-network/chain/x/dfract/types";

message MsgDeposit {
  string   depositor_address = 1;
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}